fixed intro text alignment

--- a/styles.scss
+++ b/styles.scss
@@ -18,6 +18,7 @@ div{
     font-family: Helvetica;
     font-size: 20px;
     margin-top: 6px;
+    text-align: center;
 }
 
 .intro{
